<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lyt_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#e3e3e3"
        android:gravity="center"
        android:orientation="horizontal">
<!--        android:background="#e3e3e3"-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/tv_bg"
                    android:gravity="center"
                    android:text="@string/detectionLineBiaohao"
                    android:textColor="#000"
                    android:textSize="@dimen/textmydialogssmallSize" />

                <TextView
                    android:id="@+id/detectionLineBiaohao"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/tv_bg"
                    android:gravity="center"
                    android:text="@string/cxname"
                    android:textColor="#000"
                    android:textSize="@dimen/textmydialogssmallSize" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/detectionStartingDistance"
                android:textColor="#000"
                android:textSize="@dimen/textmydialogssmallSize" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <EditText
                android:id="@+id/detectionStartingDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="@dimen/textmydialogssmallSize" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/detectionEndingDistance"
                android:textColor="#000"
                android:textSize="@dimen/textmydialogssmallSize" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <EditText
                android:id="@+id/detectionEndingDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="@dimen/textmydialogssmallSize" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/detectionLength"
                android:textColor="#000"
                android:textSize="@dimen/textmydialogssmallSize" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <EditText
                android:id="@+id/detectionLength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="@dimen/textmydialogssmallSize" />
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="雷达数据"
                    android:textColor="#000"
                    android:textSize="@dimen/textmydialogssmallSize" />

                <ImageButton
                    android:id="@+id/my_dialog_addFile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/serchfile16"
                    android:textColor="#000" />

            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/tv_pathoffile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textSize="@dimen/textmydialogssmallSize" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#d5ffcc"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/upload_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="0%" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/ib_uploadFile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/upload_file"
                    android:textColor="#000" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="现场图片"
                android:textColor="#000"
                android:textSize="@dimen/textmydialogssmallSize" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_upload_pic_01"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/uploadim16">

                </ImageButton>

                <ImageButton
                    android:id="@+id/ib_upload_pic_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone">

                </ImageButton>

                <ImageButton
                    android:id="@+id/ib_upload_pic_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone">

                </ImageButton>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#000"/>
</LinearLayout>